Frontend/integration (#6)
* Added frontpage with stock content.

* Update error messages to return jsons instead of strings

* Changed error messages to json

* Added jsdoc, improved API documentation by adding query parameters.

* Frontend can send books to backend.

* Final version, getAll now sends total items in header, frontend finished.
