# Backend/routes/book.js
@@ -59,7 +59,7 @@ async function getById(ctx, next)
         if (!permission.granted) 
         {
             ctx.status = 403;
-            ctx.body = "Insufficient access level to access this resource."
+            ctx.body = {"message":"Insufficient access level to access this resource."}
         }
         else
         {
@@ -70,7 +70,7 @@ async function getById(ctx, next)
     else
     {
         ctx.status = 404;
-        ctx.body = "There is no such resource in the records."
+        ctx.body = {"message":"There is no such resource in the records."}
     }
 }
 
@@ -84,7 +84,7 @@ async function getAll(ctx, next)
     if (!permission.granted) 
     {
         ctx.status = 403;
-        ctx.body = "Insufficient access level to access this resource."
+        ctx.body = {"message":"Insufficient access level to access this resource."}
     }
     else
     {
@@ -92,15 +92,18 @@ async function getAll(ctx, next)
         const limit = ctx.query.limit;
         const order = ctx.query.order;
         let books = await model.getAll(page, limit, order);
+        let total = await model.total("approved")
         if (books.length) 
         {
             ctx.status = 200;
             ctx.body = books;
+            ctx.set('Access-Control-Expose-Headers', 'X-Total-Count');
+            ctx.set("X-Total-Count", total.total);
         }
         else
         {
             ctx.status = 404;
-            ctx.body = "There is no such resource in the records."
+            ctx.body = {"message":"There is no such resource in the records."}
         }
     }
 }
@@ -112,7 +115,7 @@ async function addBook(ctx, next)
     if (!permission.granted) 
     {
         ctx.status = 403;
-        ctx.body = "Insufficient access level."
+        ctx.body = {"message":"Insufficient access level."}
     }
     else
     {
@@ -125,7 +128,7 @@ async function addBook(ctx, next)
         else
         {
             ctx.status = 500;
-            ctx.body = "Something went wrong on the server side. If this keeps happening, contact the admin."
+            ctx.body = {"message":"Something went wrong on the server side. If this keeps happening, contact the admin."}
         }
     }
 }
@@ -141,7 +144,7 @@ async function updateBook(ctx, next)
         if (!permission.granted) 
         {
             ctx.status = 403;
-            ctx.body = "Insufficient access level."
+            ctx.body = {"message":"Insufficient access level."}
         }
         else
         {
@@ -153,14 +156,14 @@ async function updateBook(ctx, next)
             else
             {
                 ctx.status = 500;
-                ctx.body = "Something went wrong on the server side. If this keeps happening, contact the admin."
+                ctx.body = {"message":"Something went wrong on the server side. If this keeps happening, contact the admin."}
             }
         }
     }
     else
     {
         ctx.status = 404;
-        ctx.body = "There is no such resource in the records."
+        ctx.body = {"message":"There is no such resource in the records."}
     }
 }
 
@@ -170,7 +173,7 @@ async function deleteBook(ctx, next)
     const permission = can.delete(ctx.state.user);
     if (!permission.granted) {
         ctx.status = 403;
-        ctx.body = "Insufficient access level to delete this resource."
+        ctx.body = {"message":"Insufficient access level to delete this resource."}
     }
     else
     {
@@ -182,7 +185,7 @@ async function deleteBook(ctx, next)
         else
         {
             ctx.status = 404;
-            ctx.body = "There is no such resource in the records."
+            ctx.body = {"message":"There is no such resource in the records."}
         }
     }
 }
@@ -193,20 +196,26 @@ async function getUnapproved(ctx, next)
     if (!permission.granted) 
     {
         ctx.status = 403;
-        ctx.body = "Insufficient access level."
+        ctx.body = {"message":"Insufficient access level."}
     }
     else
     {
-        let books = await model.getUnapproved();
+        const page = ctx.query.page;
+        const limit = ctx.query.limit;
+        const order = ctx.query.order;
+        let books = await model.getUnapproved(page,limit,order);
+        let total = await model.total("unapproved")
         if (books.length)
         {
             ctx.status = 200;
             ctx.body = books;
+            ctx.set('Access-Control-Expose-Headers', 'X-Total-Count');
+            ctx.set("X-Total-Count", total.total);
         }
         else
         {
             ctx.status = 404;
-            ctx.body = "There are no unapproved books in the database."
+            ctx.body = {"message":"There are no unapproved books in the database."}
         }
     }
 }
@@ -217,7 +226,7 @@ async function approveBook(ctx, next)
     if (!permission.granted)
     {
         ctx.status = 403;
-        ctx.body = "Insufficient access level."
+        ctx.body = {"message":"Insufficient access level."}
     }
     else
     {
@@ -231,7 +240,7 @@ async function approveBook(ctx, next)
         else
         {
             ctx.status = 404;
-            ctx.body = "There is no such resource in the database."
+            ctx.body = {"message":"There is no such resource in the database."}
         }
     }
 }
