# Backend/schemas/openapi.yaml
@@ -7,7 +7,7 @@ info:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
 servers:
-  - url: 'https://turboexhibit-diegosalsa-8080.codio-box.uk/api/v1'
+  - url: 'https://turboexhibit-diegosalsa-3030.codio-box.uk/api/v1'
     description: Development server on Codio
 components:
   securitySchemes:
@@ -30,7 +30,9 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            type: string
+      required:
+        - message
     SchemaValidationError:
       description: Invalid resource schema provided in request body.
       content:
@@ -70,6 +72,28 @@ components:
         -token
         -expiresIn
         -id
+  parameters:
+    page:
+      in: query
+      name: page
+      schema:
+        type: integer
+        default: 0
+      description: The number of the page of items to show. Each page is the size of "limit".
+    limit:
+      in: query
+      name: limit
+      schema:
+        type: integer
+        default: 5
+      description: The numbers of items to return.
+    order:
+      in: query
+      name: order
+      schema:
+        type: string
+        default: "id"
+      description: The property by which to sort the results.
 tags:
   - name: Login
     description: API endpoint for verifying user credentials and requesting a Json Web Token for authentication.
@@ -104,6 +128,10 @@ paths:
                 $ref: '#/components/schemas/JWT'
         '401':
           description: Invalid user credentials in BasicAuth.
+          content:
+            application/json:
+              schema:
+                type: string
   /user:
     description: This endpoint represents the user account resource. Each user is identified by an ID.
     get:
@@ -113,9 +141,17 @@ paths:
         - User
       description:
         Get data of all users from the database.
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all user records.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
@@ -226,9 +262,17 @@ paths:
         Get all book records.
       description:
         Get data of all books from the database. Does not include the full contents (request individual books for this).
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all book records from the database.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
@@ -347,9 +391,17 @@ paths:
         Get data of all books from the database which are awaiting approval.
         Does not include the full contents (request individual books for this).
         Admin only.
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all unapproved book records from the database.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
@@ -401,9 +453,17 @@ paths:
         Get all author records.
       description:
         Get data of all authors from the database. Does not include the full contents (request individual authors for this).
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all author records from the database.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
@@ -522,9 +582,17 @@ paths:
         Get data of all authors from the database which are awaiting approval.
         Does not include the full contents (request individual authors for this).
         Admin only.
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all unapproved author records from the database.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
@@ -576,9 +644,17 @@ paths:
         Get all review records.
       description:
         Get data of all reviews from the database. Does not include the full contents (request individual reviews for this).
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/order'
       responses:
         '200':
           description: Array of all review records from the database.
+          headers:
+            X-Total-Count:
+              schema:
+                type: integer
           content:
             application/json:
               schema:
